# STAT243-GA-DEV

./: LICENSE  README.md  pyproject.toml  test.qmd
.github/workflows/: ci.yml
GA/: GA.py  GA.qmd  __init__.py  select.py
GA/tests/: assess.py  setdata.py  test_base.py  test_make_new_pop.py  test_run_ga.py  test_user_inputs.py
