[build-system]
requires = ["setuptools >= 70"]
build-backend = "setuptools.build_meta"

[project]
name = "GA"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A Python library to variable selection using genetic algorithms"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "numpy"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dynamic = ["version"]


[tool.setuptools]
packages = ["GA"]

[tool.setuptools.dynamic]
version = {attr = "GA.__version__"}
